--- a/package.json
+++ b/package.json
@@ -1,24 +1,37 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-free-spaced-repetition",
+	"version": "0.1.0",
+	"description": "Spaced repetition for Obsidian notes",
 	"main": "main.js",
 	"scripts": {
-		"dev": "node esbuild.config.mjs",
-		"build": "tsc -noEmit -skipLibCheck && node esbuild.config.mjs production",
-		"version": "node version-bump.mjs && git add manifest.json versions.json"
+		"dev": "node scripts/esbuild.config.mjs",
+		"build": "node scripts/esbuild.config.mjs production",
+		"changelog": "conventional-changelog -p angular -i CHANGELOG.md -s && git add CHANGELOG.md && git commit --amend --no-edit",
+		"version": "node scripts/version-bump.mjs %npm_config_new% && git add manifest.json versions.json package.json && npm run changelog && git tag %npm_config_new%"
 	},
 	"keywords": [],
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/lodash": "^4.14.202",
 		"@types/node": "^16.11.6",
+		"@types/react": "^18.2.42",
+		"@types/react-dom": "^18.2.17",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
+		"cz-conventional-changelog": "^3.3.0",
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"ag-grid-community": "^31.0.0",
+		"ag-grid-react": "^31.0.0",
+		"fsrs.js": "^1.1.1",
+		"lodash": "^4.17.21",
+		"react": "^18.2.0",
+		"react-dom": "^18.2.0"
 	}
 }
