--- a/package.json
+++ b/package.json
@@ -14,9 +14,7 @@
 	"license": "MIT",
 	"devDependencies": {
 		"@types/lodash": "^4.14.202",
-		"@types/node": "^16.11.6",
-		"@types/react": "^18.2.42",
-		"@types/react-dom": "^18.2.17",
+		"@types/node": "^20.10.5",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -24,14 +22,17 @@
 		"esbuild": "0.17.3",
 		"obsidian": "latest",
 		"tslib": "2.4.0",
-		"typescript": "4.7.4"
+		"typescript": "latest"
 	},
 	"dependencies": {
 		"ag-grid-community": "^31.0.0",
 		"ag-grid-react": "^31.0.0",
 		"fsrs.js": "^1.1.1",
-		"lodash": "^4.17.21",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0"
+		"lodash": "^4.17.21"
+	},
+	"config": {
+		"commitizen": {
+			"path": "./node_modules/cz-conventional-changelog"
+		}
 	}
 }
