--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
-	"id": "obsidian-free-spaced-repetition",
-	"name": "Obsidian Free Spaced Repetition",
+	"id": "free-spaced-repetition",
+	"name": "Free Spaced Repetition",
 	"version": "0.1.0",
 	"minAppVersion": "0.15.0",
-	"description": "Free spaced repetition for Obsidian notes",
+	"description": "Spaced repetition for Obsidian notes in a clean and seamless way",
 	"author": "JYC333",
 	"authorUrl": "https://github.com/JYC333/osbidian-free-spaced-repetition",
 	"fundingUrl": "https://ko-fi.com/G2G7RXRRO",
