docs: fix authorUrl in manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
 	"minAppVersion": "0.15.0",
 	"description": "Spaced repetition for Obsidian notes in a clean and seamless way",
 	"author": "JYC333",
-	"authorUrl": "https://github.com/JYC333/osbidian-free-spaced-repetition",
+	"authorUrl": "https://github.com/JYC333",
 	"fundingUrl": "https://ko-fi.com/G2G7RXRRO",
 	"isDesktopOnly": false
 }
